# analytics

./: .env.example  .gitignore  AGENTS.md  DEPLOYMENT.md  README.md  package.json  pnpm-lock.yaml  proxy.ts  tsconfig.base.json  vercel.json
.github/workflows/: ci.yml
app/: globals.css  layout.tsx
app/(dashboard)/: layout.tsx  loading.tsx  page.tsx
app/(dashboard)/settings/: page.tsx
app/api/auth/login/: route.ts
app/api/auth/logout/: route.ts
app/components/: CopySnippet.tsx  DomainsList.tsx  EmptyDashboard.tsx  LiveVisitors.tsx  MenuButton.tsx  MobileSidebar.tsx  RangeSelector.tsx  SettingsContent.tsx  TopPages.tsx  Topbar.tsx  UserMenu.tsx
app/lib/: auth.ts  dashboardData.ts  supabase.ts
app/login/: page.tsx
apps/dashboard/: index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/dashboard/public/: t.js
apps/dashboard/scripts/: gen-icon.mjs
apps/dashboard/src/: App.tsx  index.css
apps/dashboard/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/dashboard/src-tauri/capabilities/: default.json
apps/dashboard/src-tauri/src/: lib.rs  main.rs
apps/dashboard/src/auth/: AuthGate.tsx  passkey.ts
apps/dashboard/src/cache/: index.ts  mock.ts  types.ts
apps/dashboard/src/components/: CommandPalette.tsx  ConfirmDialog.tsx  CreateSiteModal.tsx  EmbedSnippet.tsx  EmptyState.tsx  InstallButton.tsx  InstallPrompt.tsx  Kbd.tsx  MainPane.tsx  ReloadPrompt.tsx  ScannerRing.tsx  SettingsModal.tsx  (+4 more)
backend/: .env.example  index.js  package.json  schema.sql
dashboard/dashboard/: package-lock.json
dashboard/dashboard/app/: layout.tsx  page.tsx
dashboard/dashboard/public/: script.js
docs/: ARCHITECTURE.md
services/auth/: Dockerfile  README.md  package.json  tsconfig.json
services/auth/src/: db.ts  index.ts
services/ingest/: .dockerignore  .env.example  Caddyfile  Cargo.toml  Dockerfile  README.md  docker-compose.pi.yml  docker-compose.yml
services/ingest/src/: ip.rs  main.rs  rate.rs  state.rs  store.rs
services/ingest/src/routes/: event.rs  health.rs  mod.rs  sync.rs
services/supabase/: README.md  config.toml
services/supabase/.temp/: linked-project.json  pooler-url  project-ref
services/supabase/migrations/: 0001_initial.sql
(+41 files in other folders)
